clusters/ai-usw2/default/perceiver-trn-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: perceiver-trn
  name: perceiver-trn
spec:
  selector:
    matchLabels:
      app: perceiver-trn
  template:
    metadata:
      labels:
        app: perceiver-trn
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: amd-neuron
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      containers:
      - name: app
        image: 133573815653.dkr.ecr.us-west-2.amazonaws.com/perceiver:amd64-neuron
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /dev/shm
            name: dshm
        command: ["/start.sh"]
        resources:
          limits:
            aws.amazon.com/neuron: 16
