clusters/ai-usw2/default/sd21-512-xla-serve-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sd21-inf2-serve
  name: sd21-inf2-serve
spec:
  selector:
    matchLabels:
      app: sd21-inf2-serve
  template:
    metadata:
      labels:
        app: sd21-inf2-serve
    spec:
      nodeSelector:
        karpenter.sh/nodepool: amd-neuron
      serviceAccountName: appsimulator
      schedulerName: my-scheduler
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      containers:
      - name: app
        image: 133573815653.dkr.ecr.us-west-2.amazonaws.com/stablediffusion:amd64-neuron
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /dev/shm
            name: dshm
          - mountPath: /app
            name: workdir
        command: ["/start.sh"]
        args: ["run"]
        resources:
          limits:
            aws.amazon.com/neuron: 1
        #lifecycle:
        #  postStart:
        #    exec:
        #      command: ["/create_node_port_svc.sh"]
        #  preStop:
        #    exec:
        #      command: ["/bin/sh","-c","kubectl delete svc `kubectl get svc|grep $POD_NAME | awk '{print $1}'`"]
        ports:
          - containerPort: 8000
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
      volumes:
      - name: workdir
        emptyDir: {}
      - name: dshm
        emptyDir:
          medium: Memory
