clusters/ai-usw2/default/sd21-512-serve-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd21-512-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '9'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    alb.ingress.kubernetes.io/success-codes: '200-301'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/load-balancer-name: sd21mulitaccelserve
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
  labels:
    app: sd21-inf2-serve-ingress
spec:
  ingressClassName: alb
  rules:
     - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: sd21-512-xla-svc
              port: 
                number: 80
